--- a/Google Search Maps Button Extension/Resources/manifest.json
+++ b/Google Search Maps Button Extension/Resources/manifest.json
@@ -24,7 +24,6 @@
     }],
 
     "action": {
-        "default_popup": "popup.html",
         "default_icon": {
             "16": "images/16x16.png",
             "32": "images/32x32.png",
@@ -33,5 +32,5 @@
         }
     },
 
-    "permissions": ["*://*.google.com/*", "*://google.com/*"]
+    "permissions": ["*://*.google.com/*", "*://google.com/*", "storage"]
 }
