--- a/Google Search Maps Button Extension/Resources/manifest.json
+++ b/Google Search Maps Button Extension/Resources/manifest.json
@@ -1,36 +1,25 @@
 {
     "manifest_version": 3,
     "default_locale": "en",
-
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
     "version": "1.0",
-
     "icons": {
         "32": "images/48x48.png",
         "64": "images/96x96.png",
         "128": "images/128x128.png",
-        "256": "images/256x256.png",
-
+        "256": "images/256x256.png"
     },
-
-    "background": {
-        "service_worker": "background.js"
-    },
-
     "content_scripts": [{
         "js": [ "content.js" ],
         "matches": ["*://*.google.com/*", "*://google.com/*"]
     }],
-
     "action": {
         "default_icon": {
             "16": "images/16x16.png",
             "32": "images/32x32.png",
-            "64": "images/64x64.png",
-
+            "64": "images/64x64.png"
         }
     },
-
     "permissions": ["*://*.google.com/*", "*://google.com/*", "storage"]
 }
